--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
         <button id="logout-btn">Logout</button>
     </main>
 
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
 </body>
 </html>
 
