--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+
     <title>Signup</title>
     <link rel="stylesheet" href="./styles1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
